--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -15,21 +15,24 @@
 
             </div>
 
-            <div class="left__part">
-                <picture>
+            <div class="left__description">
+                <p class="left__description--text">Lorem ipsum dolor sit amet, 
+                       consectetur adipiscing elit, 
+                       sed do eiusmod tempor incididunt ut labore et</p>
+                <button class="left__description--btn" type="button" title="open recipe" data-menu-ice-cream-open>
+            <svg class="left__description__btn-icon">
+              <use href="./images/svg/icons.svg#arrow-right"></use>
+            </svg>
+          </button>
+            </div>
+            
+        
+            <picture class="milk-img">
                     <source srcset="" media="(min-width: 1280px)" type="image/png" >
                     <source srcset="" media="(min-width: 768px)" type="image/png">
                     <source srcset="" type="image/png">
                     <img class="" src="/images/images_headder_hiro/tablet/jar-tablet.png" alt="milk">
                 </picture>
-
-                <div class="left__part--description">
-                    <p class="left__part--text">Lorem ipsum dolor sit amet, 
-                       consectetur adipiscing elit, 
-                       sed do eiusmod tempor incididunt ut labore et</p>
-                    <button class="btn" type="button"></button>
-                </div>
-            </div>
 
             </div>
 
@@ -40,27 +43,27 @@
                     <img class="" src="/images/images_headder_hiro/tablet/ice-tablet.png" alt="ice cream">
                 </picture>
         
-            <div class="hero__container--right">
+            
                         
-                        <ul>
-                            <li>
-                                <p>16</p>
-                                <p>cafs</p>
+                        <ul class="right__description">
+                            <li class="right__description--item">
+                                <p class="text__16">16</p>
+                                <p class="text__pre">cafes</p>
                             </li>
-                            <li>
-                                <p>23</p>
-                                <p>food truck</p>
+                            <li class="right__description--item">
+                                <p class="text__23">23</p>
+                                <p class="text__pre">food truck</p>
                             </li>
                         </ul>
 
-                <picture>
+                
+
+                <picture class="girl-img">
                     <source srcset="" media="(min-width: 1280px)" type="image/png" >
                     <source srcset="" media="(min-width: 768px)" type="image/png">
                     <source srcset="" type="image/png">
                     <img class="" src="/images/images_headder_hiro/tablet/girl-tablet.png" alt="girl">
                 </picture>
-            
-            </div>
             
     </div>
 
