--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,10 +21,12 @@
             </button>
 
             <button class="header-btn" type="button">Buy now<svg class="mobile-btn-icon" width="8" height="8">
-                        <use href="/images/svg/icons.svg#icon-icon_button_right"></use></button>
+                <use href="/images/svg/icons.svg#icon-icon_button_right"></use></svg>
+            </button>
         </div>
             </div>
         <!-- mobile-menu -->
+
             <div class="mobile-menu" data-menu id="mobile-menu">
                 <button class="mobile-btn-close" type="button" data-menu-close>
                     <svg class="mobile-close-icon" width="20" height="20">
@@ -33,7 +35,7 @@
                 </button>
 
                 <button class="mobile-btn" type="button">Buy now<svg class="mobile-btn-icon" width="8" height="8">
-                        <use href="/images/svg/icons.svg#icon-icon_button_right"></use></button>
+                        <use href="/images/svg/icons.svg#icon-icon_button_right"></use></svg></button>
             
                 <div>
                     <ul class="mobile-menu-list">
