--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,4 @@
 .header {
-  
-  /* background: var(--background-pink); */
   background: transparent;
   min-height: auto;
   border-bottom: none;
@@ -11,34 +9,100 @@
   z-index: 50;
   padding-top: 6px;
   padding-bottom: 6px;
-  /* border-bottom: 1px solid var(); */
   
-  /* 
+   
   @media screen and (min-width: 768px) {
-    padding-top: ;
-    padding-bottom: ;
+    padding-top: 37px;
+    padding-bottom: 0;
   }
 
-  @media screen and (min-width: 1200px) {
-    padding-top: ;
-    padding-bottom: ;
-  } */
-}
-
-/* .header-hiro-section {
-    background: var(--background-pink);
-    width: 100vw;
-} */
-
-.header__nav {
-  display: flex;
-  align-items: center;
+  /* @media screen and (min-width: 1200px) {
+    padding-top: 37px;
+    padding-bottom: 0;
+  }  */
 }
 
 .header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.header__nav {
+  display: flex;
+  align-items: center;
+}
+
+.header__logo {
+  margin-right: 41px;
+}
+
+.menu-list {
+  display: flex;
+
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+}
+
+.menu-list__item {
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.menu-list__link {
+  font-family: var(--text-first);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.28;
+  display: flex;
+  align-items: center;
+  color: var(--primary-white-color);
+
+  &:hover {
+    color: var(--accent-color);
+  }
+
+  &:focus {
+    color: var(--accent-color);
+  }
+
+}
+
+.header-btn {
+  background: var(--primary-white-color);
+  border-radius: 22px;
+  border: none;
+  padding-left: 37px;
+  margin: 0 auto;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 160px;
+  height: 44px;
+
+  color: var(--accent-color);
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
+  &:hover {
+    background: var(--button-gray);
+  }
+
+  &:focus {
+    background: var(--button-gray);
+  }
+
+ /*  @media screen and (max-width: 1199px) {} */
 }
 
 .burger-btn {
@@ -59,6 +123,10 @@
 
   @media screen and (min-width: 1199px) {
     display: none;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 30px;
   }
 }
 
@@ -136,11 +204,6 @@
   height: 44px;
 
   color: var(--accent-color);
-
-  /* @media screen and (max-width: 767px) {
-    display: none;
-  } */
-
 }
 
 .mobile-btn-icon {
@@ -150,42 +213,6 @@
 .btn-container {
   display: flex;
   align-content: center;
-}
-
-.header-btn {
-   background: var(--primary-white-color);
-   border-radius: 22px;
-   border: none;
-   padding-left: 37px;
-   margin: 0 auto;
-   font-family: DM Sans;
-   font-style: normal;
-   font-weight: bold;
-   font-size: 16px;
-   line-height: 1.31;
-   display: flex;
-   align-items: center;
-   text-align: center;
-   width: 160px;
-   height: 44px;
-
-   color: var(--accent-color);
-
-  @media screen and (max-width: 767px) {
-    display: none;
-  } 
-
-}
-
-.menu-list__link {
-    font-family: var(--text-first);
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.28;
-    display: flex;
-    align-items: center;
-    color: var(--primary-white-color);
 }
 
 .mobile-menu-list__link {
@@ -199,10 +226,3 @@
     color: var(--primary-white-color);
 }
 
-.menu-list {
-  display: flex;
-
-  @media screen and (max-width: 1199px) {
-    display: none;
-  }
-}
