--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -13,7 +13,7 @@
     );
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
     padding-top: 50px;
     padding-bottom: 165px;
     background: linear-gradient(
@@ -23,7 +23,7 @@
     );
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     padding-top: 50px;
     padding-bottom: 165px;
 
@@ -45,20 +45,20 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-left: -50px;
+  // margin-left: -50px;
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: row;
     margin-left: -20px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     margin-left: -30px;
   }
 }
 
 .contacts-list__item {
   max-width: 220px;
-  margin-left: 50px;
+  // margin-left: 50px;
   margin-bottom: 20px;
   padding: 43px 20px;
 
@@ -71,7 +71,7 @@
     margin-bottom: 0;
   }
   @media screen and (min-width: 768px) {
-    width: 330px;
+    
     margin-left: 20px;
     margin-bottom: 0;
     flex-basis: calc((100% - 3 * 20px) / 3);
@@ -80,6 +80,7 @@
   }
 
   @media screen and (min-width: 1280px) {
+    max-width: 330px;
     margin-left: 30px;
     flex-basis: calc((100% - 3 * 30px) / 3);
     font-size: 16px;
@@ -96,7 +97,7 @@
   @media screen and (min-width: 768px) {
     margin-top: 14px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     margin-top: 10px;
   }
 }
@@ -111,7 +112,7 @@
     @media screen and (min-width: 768px) {
       margin: 30px 0;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1280px) {
       margin: 32px 0;
     }
   }
@@ -133,7 +134,7 @@
     font-size: 16px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     margin-bottom: 32px;
   }
 }
@@ -158,7 +159,7 @@
     margin-top: 16px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     margin-top: 15px;
   }
 }
@@ -204,7 +205,7 @@
     margin-top: 81px;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1280px) {
     margin-top: 86px;
   }
 }
