подправил текст и свойства

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="section-products">
+<section class="section-products" id="products">
   <div class="container-products">
     <p class="section-products__label section-products__label--margin">100% natural</p>
     <h2 class="section-products__title section-products__title--margin">products</h2>
@@ -32,21 +32,21 @@
 
               <ul class="recipe-instructions">
                 <li class="recipe-instructions__item">
-                  <b>1.</b> Очистите авокадо, удалите косточку, разрежьте на 6–8 кусочков и положите
-                  в пакет.
+                  <b>Шаг 1.</b> Очистите авокадо, удалите косточку, разрежьте на 6–8 кусочков и
+                  положите в пакет.
                 </li>
                 <li class="recipe-instructions__item">
-                  <b>2.</b> Бананы очистите и нарежьте крупными кусочками, добавьте в пакет с
+                  <b>Шаг 2.</b> Бананы очистите и нарежьте крупными кусочками, добавьте в пакет с
                   авокадо. Плотно завяжите пакет и уберите в морозильник на 2 ч.
                 </li>
                 <li class="recipe-instructions__item">
-                  <b>3.</b> Замороженные бананы и авокадо положите в чашу кухонного комбайна и
+                  <b>Шаг 3.</b> Замороженные бананы и авокадо положите в чашу кухонного комбайна и
                   измельчите до однородности. Добавьте лимонный сок и мед по вкусу и перемешивайте,
                   пока масса не превратится в мороженое.
                 </li>
                 <li class="recipe-instructions__item">
-                  <b>4.</b> Нарежьте клубнику маленькими кусочками и смешайте с мороженым. Подавайте
-                  сразу же.
+                  <b>Шаг 4.</b> Нарежьте клубнику маленькими кусочками и смешайте с мороженым.
+                  Подавайте сразу же.
                 </li>
               </ul>
             </div>
@@ -92,16 +92,16 @@
               </ul>
               <p class="recipe__lable">рецепт приготовления</p>
               <ul class="recipe-instructions">
-                <li class="recipe-instructions__item"><b>1.</b> Приготовить чашку эспрессо.</li>
+                <li class="recipe-instructions__item"><b>Шаг 1.</b> Приготовить чашку эспрессо.</li>
                 <li class="recipe-instructions__item">
-                  <b>2.</b> Все остальные компоненты последовательно смешать в блендере с колотым
-                  льдом до однородной массы.
+                  <b>Шаг 2.</b> Все остальные компоненты последовательно смешать в блендере с
+                  колотым льдом до однородной массы.
                 </li>
                 <li class="recipe-instructions__item">
-                  <b>3.</b> Добавить эспрессо в приготовленную смесь.
+                  <b>Шаг 3.</b> Добавить эспрессо в приготовленную смесь.
                 </li>
                 <li class="recipe-instructions__item">
-                  <b>4.</b> Разлить напиток по бокалам. Украсить любимым печеньем.
+                  <b>Шаг 4.</b> Разлить напиток по бокалам. Украсить любимым печеньем.
                 </li>
               </ul>
             </div>
@@ -148,11 +148,11 @@
               <p class="recipe__lable">рецепт приготовления</p>
               <ul class="recipe-instructions">
                 <li class="recipe-instructions__item">
-                  <b>1.</b> Разломайте шоколад на мелкие кусочки, залейте небольшим количеством
+                  <b>Шаг 1.</b> Разломайте шоколад на мелкие кусочки, залейте небольшим количеством
                   кипящего молока и дайте растаять. Остудите.
                 </li>
                 <li class="recipe-instructions__item">
-                  <b>2.</b> Взбейте все ингредиенты в блендере, при желании добавив горсть льда.
+                  <b>Шаг 2.</b> Взбейте все ингредиенты в блендере, при желании добавив горсть льда.
                   Налейте в охлажденные высокие стаканы, посыпьте какао-порошком через ситечко и
                   подавайте с трубочками.
                 </li>
