--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -19,7 +19,7 @@
                 <p class="left__description--text">Lorem ipsum dolor sit amet, 
                        consectetur adipiscing elit, 
                        sed do eiusmod tempor incididunt ut labore et</p>
-                <button class="left__description--btn" type="button" title="open recipe" data-menu-ice-cream-open>
+                <button class="left__description--btn" type="button" title="">
             <svg class="left__description__btn-icon">
               <use href="./images/svg/icons.svg#arrow-right"></use>
             </svg>
