--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,31 @@
 <section class="section-reviews" id="reviews">
-  <div class="container container-reviews">1</div>
-  <h2 class="visually-hidden">Customer Reviews</h2>
-  <div class="slider"></div>
+  <div class="container container-reviews">
+    <h2 class="visually-hidden">Customer Reviews</h2>
+    <div class="reviews__item">
+      <picture class="reviews__pic">
+        <source
+          srcset="
+            ./images/customer-reviews/customer-reviews-emily.webp    1x,
+            ./images/customer-reviews/customer-reviews-emily@2x.webp 2x
+          "
+          type="image/webp"
+        />
+        <source
+          srcset="
+            ./images/customer-reviews/customer-reviews-emily.png    1x,
+            ./images/customer-reviews/customer-reviews-emily@2x.png 2x
+          "
+          type="image/png"
+        />
+        <img src="" alt="emily comment" />
+      </picture>
+
+      <div class="reviews__comment">
+        <p class="reviews__text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
+          nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
