--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,7 +1,6 @@
 .section-reviews {
   padding-top: 120px;
   padding-bottom: 80px;
-  background-color: royalblue;
 }
 
 .container.container-reviews {
@@ -9,5 +8,84 @@
     width: 1200px;
     padding-left: 137px;
     padding-right: 137px;
+  }
+}
+
+.reviews__pic {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 15px;
+  }
+}
+
+.reviews__comment {
+  padding: 40px 50px 20px;
+  background-color: #fafafa;
+
+  @media screen and (min-width: 768px) {
+    padding: 30px 38px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 32px 50px;
+  }
+}
+
+.reviews__text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 2.55;
+  text-align: center;
+  letter-spacing: 0.04em;
+
+  color: var(--text-color-black);
+  position: relative;
+  z-index: 14;
+  padding-left: 10px;
+  padding-right: 10px;
+
+  @media screen and (min-width: 768px) {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 2.16;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.86;
+  }
+}
+
+.reviews__text::before {
+  content: '';
+  position: absolute;
+  width: 54px;
+  height: 40px;
+  z-index: -1;
+
+  top: -15px;
+  left: 10px;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  background-image: url('../images/svg/marks.svg');
+
+  @media screen and (min-width: 768px) {
+    left: -10px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    left: 0;
   }
 }
