--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -26,6 +26,18 @@
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
         </p>
       </div>
+      <p class="reviews__lable">Emily, Los Angeles</p>
+      <div class="reviews__markes">
+        <svg class="reviews__icon">
+          <use href="./images/svg/icons.svg#icon-home"></use>
+        </svg>
+        <svg class="reviews__icon">
+          <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+        </svg>
+        <svg class="reviews__icon">
+          <use href="./images/svg/icons.svg#icon-ellipse-grey"></use>
+        </svg>
+      </div>
     </div>
   </div>
 </section>
