--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -89,3 +89,28 @@
     left: 0;
   }
 }
+
+.reviews__lable {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.86;
+  text-align: center;
+  color: var(--text-color-black);
+
+  @media screen and (min-width: 768px) {
+    font-size: 16px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 20px;
+  }
+}
+
+.reviews__icon {
+  width: 12px;
+  height: 12px;
+
+  &:not(:last-child) {
+    margin-right: 18px;
+  }
+}
