--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -27,7 +27,7 @@
         </p>
       </div>
       <p class="reviews__lable">Emily, Los Angeles</p>
-      <div class="reviews__markes">
+      <div class="reviews__markeкs">
         <svg class="reviews__icon">
           <use href="./images/svg/icons.svg#icon-home"></use>
         </svg>
