--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -26,14 +26,17 @@
 }
 
 .reviews__comment {
+  margin-bottom: 30px;
   padding: 40px 50px 20px;
   background-color: #fafafa;
 
   @media screen and (min-width: 768px) {
+    margin-bottom: 25px;
     padding: 30px 38px;
   }
 
   @media screen and (min-width: 1200px) {
+    margin-bottom: 15px;
     padding: 32px 50px;
   }
 }
@@ -50,6 +53,8 @@
   z-index: 14;
   padding-left: 10px;
   padding-right: 10px;
+
+  background: repeating-linear-gradient(to bottom, transparent 0 30px, #e1e1e1 0 32px);
 
   @media screen and (min-width: 768px) {
     font-weight: 500;
@@ -91,6 +96,8 @@
 }
 
 .reviews__lable {
+  margin-bottom: 30px;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.86;
@@ -99,11 +106,31 @@
 
   @media screen and (min-width: 768px) {
     font-size: 16px;
+    margin-bottom: 35px;
   }
 
   @media screen and (min-width: 1200px) {
     font-size: 20px;
   }
+}
+
+.reviews__lable::before {
+  content: '•••';
+  display: block;
+  margin: 0 auto 15px;
+
+  width: 50px;
+  height: 4px;
+  color: var(--accent-color);
+
+  font-size: 20px;
+  line-height: 0%;
+  letter-spacing: 0.5em;
+}
+
+.reviews__markeкs {
+  display: flex;
+  justify-content: center;
 }
 
 .reviews__icon {
