--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -26,6 +26,17 @@
           nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
         </p>
       </div>
+      <div class="slider__markeкs">
+        <svg class="slider__markeкs-icon">
+          <use href="./images/svg/icons.svg#icon-ellipse-red"></use>
+        </svg>
+        <svg class="slider__markeкs-icon">
+          <use href="./images/svg/icons.svg#icon-ellipse-red"></use>
+        </svg>
+        <svg class="slider__markeкs-icon">
+          <use href="./images/svg/icons.svg#icon-ellipse-red"></use>
+        </svg>
+      </div>
       <p class="reviews__lable">Emily, Los Angeles</p>
       <div class="reviews__markeкs">
         <svg class="reviews__icon">
