--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -4,6 +4,12 @@
 }
 
 .container.container-reviews {
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding-left: 74px;
+    padding-right: 74px;
+  }
+
   @media screen and (min-width: 1200px) {
     width: 1200px;
     padding-left: 137px;
