--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,24 +2,25 @@
   <div class="container container-reviews">
     <h2 class="visually-hidden">Customer Reviews</h2>
     <div class="reviews__item">
-      <picture class="reviews__pic">
-        <source
-          srcset="
-            ./images/customer-reviews/customer-reviews-emily.webp    1x,
-            ./images/customer-reviews/customer-reviews-emily@2x.webp 2x
-          "
-          type="image/webp"
-        />
-        <source
-          srcset="
-            ./images/customer-reviews/customer-reviews-emily.png    1x,
-            ./images/customer-reviews/customer-reviews-emily@2x.png 2x
-          "
-          type="image/png"
-        />
-        <img src="" alt="emily comment" />
-      </picture>
-
+      <div class="reviews__picture-container">
+        <picture>
+          <source
+            srcset="
+              ./images/customer-reviews/customer-reviews-emily.webp    1x,
+              ./images/customer-reviews/customer-reviews-emily@2x.webp 2x
+            "
+            type="image/webp"
+          />
+          <source
+            srcset="
+              ./images/customer-reviews/customer-reviews-emily.png    1x,
+              ./images/customer-reviews/customer-reviews-emily@2x.png 2x
+            "
+            type="image/png"
+          />
+          <img src="" alt="emily comment" />
+        </picture>
+      </div>
       <div class="reviews__comment">
         <p class="reviews__text">
           Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
