--- a/src/partials/hiro.html
+++ b/src/partials/hiro.html
@@ -8,10 +8,10 @@
 
               <h1 class="hero-title"><span class="hero-title__part">ice cream made with</span> passion</h1>
     
-              <ul class="btn-colection list">
-                 <li class="btn-colection__item"><button class="btn-pre-hero" type="button">Products</button></li>
-                 <li class="btn-colection__item"><button class="btn-pre-hero" type="button">How it’s made?</button></li>
-              </ul>
+                <ul class="btn-colection list">
+                   <li class="btn-colection__item"><button class="btn-pre-hero" type="button">Products</button></li>
+                   <li class="btn-colection__item"><button class="btn-pre-hero" type="button">How it’s made?</button></li>
+                </ul>
 
             </div>
 
@@ -26,25 +26,25 @@
           </button>
             </div>
             
-        
-            <picture class="milk-img">
-                    <source srcset="" media="(min-width: 1280px)" type="image/png" >
-                    <source srcset="" media="(min-width: 768px)" type="image/png">
-                    <source srcset="" type="image/png">
+        <div class="milk-img">
+            <picture>
+                    <source srcset="/images/images_headder_hiro/dekstop/jar-dekstop.png 1x, /images/images_headder_hiro/dekstop/jar-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png" >
+                    <source srcset="images/images_headder_hiro/tablet/jar-tablet.png 1x, /images/images_headder_hiro/tablet/jar-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
                     <img class="" src="/images/images_headder_hiro/tablet/jar-tablet.png" alt="milk">
-                </picture>
+            </picture>
+        </div>
+            
 
             </div>
-
-                <picture class="ice-cream__pic">
-                    <source srcset="" media="(min-width: 1280px)" type="image/png" >
-                    <source srcset="" media="(min-width: 768px)" type="image/png">
-                    <source srcset="" type="image/png">
+            <div class="ice-cream__pic">
+                <picture>
+                    <source srcset="/images/images_headder_hiro/dekstop/ice-dekstop.png 1x, /images/images_headder_hiro/dekstop/ice-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png" >
+                    <source srcset="/images/images_headder_hiro/tablet/ice-tablet.png 1x, /images/images_headder_hiro/tablet/ice-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
+                    <source srcset="/images/images_headder_hiro/mobile/ice-mobile.png 1x, /images/images_headder_hiro/mobile/ice-mobile@2x.png 2x" type="image/png">
                     <img class="" src="/images/images_headder_hiro/tablet/ice-tablet.png" alt="ice cream">
                 </picture>
-        
-            
-                        
+            </div>
+
                         <ul class="right__description">
                             <li class="right__description--item">
                                 <p class="text__16">16</p>
@@ -56,17 +56,15 @@
                             </li>
                         </ul>
 
-                
-
-                <picture class="girl-img">
-                    <source srcset="" media="(min-width: 1280px)" type="image/png" >
-                    <source srcset="" media="(min-width: 768px)" type="image/png">
-                    <source srcset="" type="image/png">
+                <div  class="girl-img">
+                    <picture>
+                    <source srcset="/images/images_headder_hiro/dekstop/girl-dekstop.png 1x, /images/images_headder_hiro/dekstop/girl-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png" >
+                    <source srcset="images/images_headder_hiro/tablet/girl-tablet.png 1x, /images/images_headder_hiro/tablet/girl-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
                     <img class="" src="/images/images_headder_hiro/tablet/girl-tablet.png" alt="girl">
                 </picture>
-            
-    </div>
+                </div>
 
+            </div>
 </section>
 
             <!-- <div class="about__img">
