--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,96 +4,73 @@
         <ul class="contacts-list">
             <li class="contacts-list__item">
                 <b class="place-card">Cafe</b>
-                <ul class="contacts-list__card-city">
-                    <li class="contacts-list__card-city-item">
-                        <p class="city-card">Chicago</p>
-
-                        <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                    </li>
-                </ul>
-                <ul class="contacts-list__card-time">
-                    <li class="contacts-list__card-time-item">
+                <div class="contacts-list__card-city">
+                    <p class="city-card">Chicago</p>
+                    <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <div class="contacts-list__card-time">
+                    <div class="contacts-list__work-time">
                         <p class="day-card">Monday - Friday</p>
-
                         <p class="time-card"><time datetime="06:00">06:00 AM</time> - <time datetime="22:00">10:00
                                 PM</time>
                         </p>
-                    </li>
-                    <li class="contacts-list__card-time-item">
+                    </div>
+                    <div class="contacts-list__work-time">
                         <p class="day-card">Saturday - Sunday</p>
-
                         <p class="time-card"><time datetime="08:00">08:00 AM</time> - <time datetime="16:00">16:00
                                 PM</time>
                         </p>
-                    </li>
-                </ul>
-                <ul class="contacts-list__card-telephone">
-                    <li><a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
-                    <li><a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-                </ul>
+                    </div>
+                </div>
+                <a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                <a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a>
             </li>
-
             <li class="contacts-list__item">
                 <b class="place-card">Foodtruck</b>
-                <ul class="contacts-list__card-city">
-                    <li class="contacts-list__card-city-item">
-                        <p class="city-card">Los Angeles</p>
-
-                        <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                    </li>
-                </ul>
-                <ul class="contacts-list__card-time">
-                    <li class="contacts-list__card-time-item">
+                <div class="contacts-list__card-city">
+                    <p class="city-card">Los Angeles</p>
+                    <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <div class="contacts-list__card-time">
+                    <div class="contacts-list__work-time">
                         <p class="day-card">Monday - Friday</p>
-
                         <p class="time-card"><time datetime="06:00">06:00 AM</time> - <time datetime="22:00">10:00
                                 PM</time>
                         </p>
-                    </li>
-                    <li class="contacts-list__card-time-item">
+                    </div>
+                    <div class="contacts-list__work-time">
                         <p class="day-card">Saturday - Sunday</p>
-
                         <p class="time-card"><time datetime="08:00">08:00 AM</time> - <time datetime="16:00">16:00
                                 PM</time>
                         </p>
-                    </li>
-                </ul>
-                <ul class="contacts-list__card-telephone">
-                    <li><a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
-                    <li><a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-                </ul>
+                    </div>
+                </div>
+                <a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                <a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a>
             </li>
             <li class="contacts-list__item">
                 <b class="place-card">Cafe</b>
-                <ul class="contacts-list__card-city">
-                    <li class="contacts-list__card-city-item">
-                        <p class="city-card">New York</p>
-
-                        <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-                    </li>
-                </ul>
-                <ul class="contacts-list__card-time">
-                    <li class="contacts-list__card-time-item">
+                <div class="contacts-list__card-city">
+                    <p class="city-card">New York</p>
+                    <p class="text-card">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+                </div>
+                <div class="contacts-list__card-time">
+                    <div class="contacts-list__work-time">
                         <p class="day-card">Monday - Friday</p>
-
                         <p class="time-card"><time datetime="06:00">06:00 AM</time> - <time datetime="22:00">10:00
                                 PM</time>
                         </p>
-                    </li>
-                    <li class="contacts-list__card-time-item">
+                    </div>
+                    <div class="contacts-list__work-time">
                         <p class="day-card">Saturday - Sunday</p>
-
                         <p class="time-card"><time datetime="08:00">08:00 AM</time> - <time datetime="16:00">16:00
                                 PM</time>
                         </p>
-                    </li>
-                </ul>
-                <ul class="contacts-list__card-telephone">
-                    <li><a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
-                    <li><a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
-                </ul>
+                    </div>
+                </div>
+                <a class="contacts-number-card" href="tel:+61(0)383766284">+61(0) 383 766 284</a>
+                <a class="contacts-mail-card" href="mailto:noreply@envato.com">noreply@envato.com</a>
             </li>
-
         </ul>
 
         <ul class="contacts-button-list">
@@ -111,3 +88,4 @@
     </div>
 
 </section>
+
