--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,9 +1,10 @@
 .contacts {
-  padding-top: 50px;
+  padding-top: 86px;
   padding-bottom: 113px;
   background-color: var(--background-section);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
 
   @media screen and (max-width: 767px) {
     background: linear-gradient(
@@ -14,7 +15,7 @@
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    padding-top: 50px;
+    padding-top: 119px;
     padding-bottom: 165px;
     background: linear-gradient(
       to bottom,
@@ -24,7 +25,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    padding-top: 50px;
+    padding-top: 132px;
     padding-bottom: 165px;
 
     background-image: url(../images/contacts/bg-contacts.png),
@@ -41,24 +42,23 @@
   }
 }
 .contacts-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  // margin-left: -50px;
+  margin-left: auto;
+margin-right: auto;
   @media screen and (min-width: 768px) {
     display: flex;
-    flex-direction: row;
+    
+    align-items: center;
+    justify-content: center;
     margin-left: -20px;
+    margin-right: 0;
   }
   @media screen and (min-width: 1200px) {
     margin-left: -30px;
+    margin-right: 0;
   }
 }
 
 .contacts-list__item {
-  max-width: 220px;
-  // margin-left: 50px;
   margin-bottom: 20px;
   padding: 43px 20px;
 
@@ -79,7 +79,6 @@
   }
 
   @media screen and (min-width: 1200px) {
-    max-width: 330px;
     margin-left: 30px;
     flex-basis: calc((100% - 3 * 30px) / 3);
     font-size: 16px;
@@ -91,15 +90,6 @@
 .contacts-list__card-city {
 }
 
-.contacts-list__card-city-item + .contacts-list__card-city-item {
-  margin-top: 10px;
-  @media screen and (min-width: 768px) {
-    margin-top: 14px;
-  }
-  @media screen and (min-width: 1200px) {
-    margin-top: 10px;
-  }
-}
 .contacts-list__card-city,
 .contacts-list__card-time {
   &::after {
@@ -145,6 +135,22 @@
 }
 .city-card {
   color: var(--text-color-black);
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.83;
+  letter-spacing: 0.04em;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 14px;
+
+    font-size: 14px;
+    line-height: 1.85;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 10px;
+    font-size: 16px;
+    line-height: 1.87;
+  }
 }
 .text-card {
   color: var(--text-color-gray);
@@ -152,14 +158,13 @@
 
 .contacts-list__card-time {
 }
-.contacts-list__card-time-item + .contacts-list__card-time-item {
-  margin-top: 10px;
+.contacts-list__work-time:not(:last-child) {
+  margin-bottom: 10px;
   @media screen and (min-width: 768px) {
-    margin-top: 16px;
+    margin-bottom: 16px;
   }
-
   @media screen and (min-width: 1200px) {
-    margin-top: 15px;
+    margin-bottom: 15px;
   }
 }
 
@@ -180,6 +185,7 @@
 .contacts-number-card,
 .contacts-mail-card {
   color: var(--text-color-gray);
+  display: block;
   &:hover,
   &:focus {
     color: var(--accent-color);
